[project]
name = "vaccone-score-project-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.21.1",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]
